Enough for tonight

--- a/index.html
+++ b/index.html
@@ -1,7 +1,185 @@
+<!doctype html>
 <html>
+
 <head>
+  <title>CV for Lukas Knudsen Høgh</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="reset.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-YO
+
 <body>
+
+  <section>
+    <header>
+      <h2>Info</h2>
+    </header>
+
+    <article>
+      <figure>
+        <img src="images/photo.png" alt="Photo of me">
+      </figure>
+
+      <h3>Contact</h3>
+      <dl>
+        <dt>Name</dt>
+        <dd>Lukas Knudsen Høgh</dd>
+
+        <dt>Email</dt>
+        <dd>lukashoegh@gmail.com</dd>
+
+        <dt>Phone</dt>
+        <dd>(+45) 25 52 02 05</dd>
+
+        <dt>Address</dt>
+        <dd>
+          <address>
+            C. A. Thyregods Vej 91 st. tv. 8230 Åbyhøj Denmark
+          </address>
+        </dd>
+      </dl>
+
+      <h3>Personal</h3>
+      <dl>
+        <dt>Age</dt>
+        <dd id="age"></dd>
+
+        <dt>Nationality</dt>
+        <dd><img src="images/dk.png">Danish</dd>
+
+        <dt>Languages (fluent)</dt>
+        <dd><img src="images/dk.png">Danish, <img src="images/uk.png">English</dd>
+
+        <dt>Languages (some experience)</dt>
+        <dd><img src="images/de.png">German, <img src="images/es.ong">Spanish</dd>
+      </dl>
+
+      <h3>About me</h3>
+      <p>I am a outgoing, creative and confident. I work best in a relaxed environment where there is room for discussion and
+        ideas. I believe frequent interaction with co-workers is invaluable when working on large projects, but also enjoy
+        understanding new concepts on my own.
+        <p>
+    </article>
+
+    <footer>
+      <figure>
+        <img src="images/info.png" alt="Info">
+      </figure>
+    </footer>
+  </section>
+
+  <section>
+    <header>
+      <h2>Edu</h2>
+    </header>
+
+    <article>
+      <h3>University</h3>
+      <p>My masters degree is in the mathematics from Aarhus University, graduating in 2017. During my education I have also
+        completed courses in programming and computer science.</p>
+      <p><a href="grades.pdf">View courses and grades (PDF).</a></p>
+
+      <h3>Non University</h3>
+      <dl>
+        <dt>Highschool
+          <dt>
+            <dd>Langkær Gymnasium, Aarhus (2008)</dd>
+            <dt>Secondary School</dt>
+            <dd>GCSEs completed at Archbishop Holgate's School in York, England (2005)</dd>
+      </dl>
+    </article>
+
+    <footer>
+      <figure>
+        <img src="images/edu.png">
+      </figure>
+    </footer>
+  </section>
+
+  <section>
+    <header>
+      <h2>Work</h2>
+    </header>
+
+    <article>
+
+      <h3>Professional</h3>
+      <ul>
+        <li>In 2008-2009 I worked at Bilka Tilst in the "Service Center". My job involved helping customers with faulty electronic
+          devices, and dealing with the RMA process from Bilkas distributors</li>
+        <li>During my time at the University, I worked extensively as a Student Teacher (TA). I received some very friendly feedback
+          from my students - to view a sample please <a href="feedback.pdf">follow this link (PDF)</a></li>
+      </ul>
+
+      <h3>Voluntary</h3>
+      <p>I was a member of the board of
+        <emph>Eulers Venner</emph>, a extra curricular lecture association at the Department of Mathematics at Aarhus University
+        (see <a href="http://euler.au.dk">euler.au.dk</a>). I served as web-responsible and treasurer.</p>
+    </article>
+
+    <footer>
+      <figure>
+        <img src="images/work.png">
+      </figure>
+    </footer>
+  </section>
+
+  <section>
+    <header>
+      <h2>Tech</h2>
+    </header>
+
+    <article>
+
+      <p>In this tab I list (some of) the technologies I have experience using. They are grouped by my experience level. Hover
+        any technology to view a more detailed description. There is also a search functionality for easy overview:</p>
+
+      <h3>Highly experienced</h3>
+      <ul id="high">
+      </ul>
+
+      <h3>Solid understanding</h3>
+      <ul id="solid">
+      </ul>
+
+      <h3>A taste of...</h3>
+      <ul id="taste">
+      </ul>
+
+    </article>
+
+    <footer>
+      <figure>
+        <img src="images/tech.png">
+      </figure>
+    </footer>
+  </section>
+
+  <section>
+    <header>
+      <h2>Etc</h2>
+    </header>
+
+    <article>
+      <h3>
+        Hobbies
+      </h3>
+      <ul>
+        <li>I play keyboard and sing in a band of 4, where we play homewritten Rock/Pop.</li>
+        <li>I enjoy working on graphic design for print and the web (i.e. this website!)</li>
+        <li>I am an avid PC gamer - a long time fan of Dota2, Hearthstone, Counter Strike. I also enjoy simluation games (like
+          Factorio) and Roguelikes (like Dungeons of Dredmor).</li>
+        <li>I take pride in being an above average cook, and always enjoy being served a good meal!</li>
+      </ul>
+    </article>
+    <footer>
+      <figure>
+        <img src="images/etc.png">
+      </figure>
+    </footer>
+  </section>
+
+  <script src="main.js"></script>
 </body>
+
 </html>
