--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <title>CV for Lukas Knudsen Høgh</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="reset.css">
+  <link rel="stylesheet" type="text/css" media="screen and (min-width: 1200px)" href="layout-wide.css">
+  <link rel="stylesheet" type="text/css" media="screen and (max-width: 1200px)" href="layout-narrow.css">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -16,49 +19,54 @@
     </header>
 
     <article>
-      <figure>
-        <img src="images/photo.png" alt="Photo of me">
+      <figure class="floating-figure">
+        <img src="images/photo.jpg" alt="Photo of me">
       </figure>
-
-      <h3>Contact</h3>
-      <dl>
-        <dt>Name</dt>
-        <dd>Lukas Knudsen Høgh</dd>
-
-        <dt>Email</dt>
-        <dd>lukashoegh@gmail.com</dd>
-
-        <dt>Phone</dt>
-        <dd>(+45) 25 52 02 05</dd>
-
-        <dt>Address</dt>
-        <dd>
-          <address>
-            C. A. Thyregods Vej 91 st. tv. 8230 Åbyhøj Denmark
-          </address>
-        </dd>
-      </dl>
-
-      <h3>Personal</h3>
-      <dl>
-        <dt>Age</dt>
-        <dd id="age"></dd>
-
-        <dt>Nationality</dt>
-        <dd><img src="images/dk.png">Danish</dd>
-
-        <dt>Languages (fluent)</dt>
-        <dd><img src="images/dk.png">Danish, <img src="images/uk.png">English</dd>
-
-        <dt>Languages (some experience)</dt>
-        <dd><img src="images/de.png">German, <img src="images/es.ong">Spanish</dd>
-      </dl>
 
       <h3>About me</h3>
       <p>I am a outgoing, creative and confident. I work best in a relaxed environment where there is room for discussion and
         ideas. I believe frequent interaction with co-workers is invaluable when working on large projects, but also enjoy
         understanding new concepts on my own.
-        <p>
+      </p>
+
+      <div class="infocol">
+        <h3>Contact</h3>
+        <dl>
+          <dt>Name</dt>
+          <dd>Lukas Knudsen Høgh</dd>
+
+          <dt>Email</dt>
+          <dd>lukashoegh@gmail.com</dd>
+
+          <dt>Phone</dt>
+          <dd>(+45) 25 52 02 05</dd>
+
+          <dt>Address</dt>
+          <dd>
+            <address>C. A. Thyregods Vej 91 st. tv.
+              8230 Åbyhøj
+              Denmark
+            </address>
+          </dd>
+        </dl>
+      </div>
+
+      <div class="infocol">
+        <h3>Personal</h3>
+        <dl>
+          <dt>Age</dt>
+          <dd id="age"></dd>
+
+          <dt>Nationality</dt>
+          <dd><img src="images/dk.png" class="flag">Danish</dd>
+
+          <dt>Languages (fluent)</dt>
+          <dd><img src="images/dk.png" class="flag">Danish, <img src="images/uk.png" class="flag">English</dd>
+
+          <dt>Languages (some experience)</dt>
+          <dd><img src="images/de.png" class="flag">German, <img src="images/es.png" class="flag">Spanish</dd>
+        </dl>
+      </div>
     </article>
 
     <footer>
@@ -77,15 +85,60 @@
       <h3>University</h3>
       <p>My masters degree is in the mathematics from Aarhus University, graduating in 2017. During my education I have also
         completed courses in programming and computer science.</p>
-      <p><a href="grades.pdf">View courses and grades (PDF).</a></p>
 
-      <h3>Non University</h3>
+      <h3>Course list</h3>
+      <p><a href="#" id="toggle-course-list-math">Click here to toggle mathematics course list</a></p>
+      <p><a href="#" id="toggle-course-list-cs">Click here to toggle computer science course list</a></p>
+
+      <div id="course-list-math" class="hidden">
+        <ul class="course-list">
+          <li>Calculus 1 & 2</li>
+          <li>Mathematical Perspectives</li>
+          <li>Linear Algebra</li>
+          <li>Mathematical Analysis 0, 1 & 2</li>
+          <li>Algebra</li>
+          <li>Differential Equations</li>
+          <li>Geometry</li>
+          <li>Complex Analysis</li>
+          <li>Mathematical Modelling 0, 1 & 2</li>
+          <li>The Philosophy of Mathematics</li>
+          <li>Measure Theory</li>
+          <li>Real Analysis</li>
+          <li>Functional Equations 1 & 2</li>
+          <li>Advanced Algebra</li>
+          <li>Advanced Analysis</li>
+          <li>Bachelor Project on the subject of functional equations</li>
+          <li>Von Neumann Algebras and Tomita-Takesaki Theory</li>
+          <li>Differential Geometry</li>
+          <li>Knot Theory</li>
+          <li>Analysis on Manifolds</li>
+          <li>Advanced Complex Function Theory</li>
+          <li>Mathematics Education</li>
+          <li>Masters thesis on the subject of KMS Weight, which relate to the theory of C<sup>*</sup>-algebras.</li>
+        </ul>
+      </div>
+
+      <div id="course-list-cs" class="hidden">
+        <ul class="course-list">
+          <li>Introduction to Programming</li>
+          <li>Programming 2</li>
+          <li>Algorithms and Data Structures 1 & 2</li>
+          <li>Regularity and Automata</li>
+          <li>Computability and Logic</li>
+          <li>Software Architecture</li>
+          <li>Computational Geometry</li>
+          <li>Introduction to Functional Programming</li>
+        </ul>
+      </div>
+
+      <p><a href="grades.pdf">View courses and grades (PDF printout from Aarhus University).</a></p>
+
+      <h3>Pre-university</h3>
       <dl>
-        <dt>Highschool
-          <dt>
-            <dd>Langkær Gymnasium, Aarhus (2008)</dd>
-            <dt>Secondary School</dt>
-            <dd>GCSEs completed at Archbishop Holgate's School in York, England (2005)</dd>
+        <dt>Highschool</dt>
+        <dd>Langkær Gymnasium, Aarhus (2008)</dd>
+        <dt>Secondary School</dt>
+        <dd>GCSEs completed at Archbishop Holgate's School in York, England (2005)</dd>
       </dl>
     </article>
 
@@ -104,13 +157,15 @@
     <article>
 
       <h3>Professional</h3>
-      <ul>
-        <li>In 2008-2009 I worked at Bilka Tilst in the "Service Center". My job involved helping customers with faulty electronic
-          devices, and dealing with the RMA process from Bilkas distributors</li>
-        <li>During my time at the University, I worked extensively as a Student Teacher (TA). I received some very friendly feedback
-          from my students - to view a sample please <a href="feedback.pdf">follow this link (PDF)</a></li>
-      </ul>
-
+      <p>
+        <ul>
+          <li>In 2008-2009 I worked at Bilka Tilst in the "Service Center". My job involved helping customers with faulty electronic
+            devices, and dealing with the RMA process from Bilkas distributors.</li>
+          <li>During my time at the University, I worked extensively as a Student Teacher (TA). I received some very friendly feedback
+            from my students - to view a sample please <a href="feedback1.pdf">follow this link (PDF)</a>, <a href="feedback2.jpg">or this one</a>.</li>
+        </ul>
+      </p>
+      
       <h3>Voluntary</h3>
       <p>I was a member of the board of
         <emph>Eulers Venner</emph>, a extra curricular lecture association at the Department of Mathematics at Aarhus University
@@ -124,27 +179,30 @@
     </footer>
   </section>
 
-  <section>
+  <section class="active">
     <header>
       <h2>Tech</h2>
     </header>
 
     <article>
+      <h3>Philosophy</h3>
+      <p>Ever since I learned about the principles of test driven development, agile software development, and compositional design, they have become cornerstones of my approach to software. Not only do they make code a joy to produce; the difference in maintainability is night and day when these approaches are followed.
 
-      <p>In this tab I list (some of) the technologies I have experience using. They are grouped by my experience level. Hover
-        any technology to view a more detailed description. There is also a search functionality for easy overview:</p>
+      <h3>Concrete Experience</h3>
 
-      <h3>Highly experienced</h3>
-      <ul id="high">
-      </ul>
+      <p>I list here some of the technologies I have experience using, along with my personal oppinion of my experience level with them. Click to any item toggle further information.
 
-      <h3>Solid understanding</h3>
-      <ul id="solid">
-      </ul>
+      <h4>Highly experienced</h3>
+      <p><ul id="high" class="techlist">
+      </ul></p>
 
-      <h3>A taste of...</h3>
-      <ul id="taste">
-      </ul>
+      <h4>Solid understanding</h3>
+      <p><ul id="solid" class="techlist">
+      </ul></p>
+
+      <h4>A taste of...</h3>
+      <p><ul id="taste" class="techlist">
+      </ul></p>
 
     </article>
 
@@ -164,13 +222,28 @@
       <h3>
         Hobbies
       </h3>
-      <ul>
-        <li>I play keyboard and sing in a band of 4, where we play homewritten Rock/Pop.</li>
-        <li>I enjoy working on graphic design for print and the web (i.e. this website!)</li>
-        <li>I am an avid PC gamer - a long time fan of Dota2, Hearthstone, Counter Strike. I also enjoy simluation games (like
-          Factorio) and Roguelikes (like Dungeons of Dredmor).</li>
-        <li>I take pride in being an above average cook, and always enjoy being served a good meal!</li>
-      </ul>
+      <p>
+        <ul>
+          <li>I play keyboard and sing in a band of 4, where we play homewritten Rock/Pop.</li>
+          <li>I enjoy working on graphic design for print and the web (i.e. this website!)</li>
+          <li>I am an avid PC gamer - a long time fan of Dota2, Hearthstone, Counter Strike. I also enjoy simluation games (like
+            Factorio) and Roguelikes (like Dungeons of Dredmor).</li>
+          <li>I take pride in being an above average cook, and always enjoy being served a good meal!</li>
+        </ul>
+      </p>
+
+      <h3>Social Media</h3>
+      <dl>
+        <dt>Facebook</dt>
+        <dd><a href="https://www.facebook.com/lukashoegh">facebook.com/lukashoegh</a></dd>
+
+        <dt>Twitter</dt>
+        <dd><a href="https://twitter.com/tehniobium">twitter.com/tehniobium</a><br>@tehniobium</dd>
+
+        <dt>Reddit</dt>
+        <dd><a href="https://www.reddit.com/user/tehniobium/">www.reddit.com/user/tehniobium/</a><br>/u/tehniobium</dd>
+      </dl>
+
     </article>
     <footer>
       <figure>
