--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
           <dt>Languages (fluent)</dt>
           <dd><img src="images/dk.png" class="flag">Danish, <img src="images/uk.png" class="flag">English</dd>
 
-          <dt>Languages (some experience)</dt>
+          <dt>Languages (basic)</dt>
           <dd><img src="images/de.png" class="flag">German, <img src="images/es.png" class="flag">Spanish</dd>
+
+          <dt>Drivers License</dt>
+          <dd>Danish B License</dd>
         </dl>
       </div>
     </article>
@@ -225,7 +228,7 @@
       <p>
         <ul>
           <li>I play keyboard and sing in a band of 4, where we play homewritten Rock/Pop.</li>
-          <li>I enjoy working on graphic design for print and the web (i.e. this website!)</li>
+          <li>I enjoy working on graphic design for print and the web (i.e. this website!).</li>
           <li>I am an avid PC gamer - a long time fan of Dota2, Hearthstone, Counter Strike. I also enjoy simluation games (like
             Factorio) and Roguelikes (like Dungeons of Dredmor).</li>
           <li>I take pride in being an above average cook, and always enjoy being served a good meal!</li>
